--- a/page_analyzer/templates/show_url.html
+++ b/page_analyzer/templates/show_url.html
@@ -52,7 +52,7 @@
   </div>
 
     <h2 class="mt-5 mb-3">Проверки</h2>
-    <form method="post" action="/urls/1/checks">
+    <form method="post" action="/urls/{{url[0]}}/checks">
     <input type="submit" class="btn btn-primary" value="Запустить проверку">
     </form>
     
@@ -68,9 +68,18 @@
         <th>Дата создания</th>
       </tr>
     </thead>
+    {% for check in checks %}
       <tbody>
-    
+        <tr>
+            <td>{{check[0]}}</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>{{check[6]}}</td>
+        </tr>
     </tbody>
+    {% endfor %}
     </table>
   </div>
 
