--- a/page_analyzer/templates/show_url.html
+++ b/page_analyzer/templates/show_url.html
@@ -72,7 +72,7 @@
       <tbody>
         <tr>
             <td>{{check[0]}}</td>
-            <td></td>
+            <td>{{check[2]}}</td>
             <td></td>
             <td></td>
             <td></td>
