--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -57,7 +57,7 @@
           <td>{{check_urls[url[0]][6]}}</td>
           
           
-          <td></td>
+          <td>{{check_urls[url[0]][2]}}</td>
           
         </tr>
       
