--- a/page_analyzer/templates/show_url.html
+++ b/page_analyzer/templates/show_url.html
@@ -21,8 +21,13 @@
   
   {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
-      {% for category, message in messages %}
-        <div class="alert alert-success" role="alert">{{message}}</div>
+  {% for category, message in messages %}
+  {% if message == 'Страница успешно добавлена' %}
+    <div class="alert alert-success" role="alert">{{message}}</div>
+    {% endif %}
+    {% if message == 'Страница уже существует' %}
+    <div class="alert alert-info" role="alert">{{message}}</div>
+    {% endif %}
       {% endfor %}
   {% endif %}
 {% endwith %}
