--- a/page_analyzer/templates/show_url.html
+++ b/page_analyzer/templates/show_url.html
@@ -22,12 +22,7 @@
   {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
   {% for category, message in messages %}
-  {% if message == 'Страница успешно добавлена' %}
-    <div class="alert alert-success" role="alert">{{message}}</div>
-    {% endif %}
-    {% if message == 'Страница уже существует' %}
-    <div class="alert alert-info" role="alert">{{message}}</div>
-    {% endif %}
+    <div class="alert alert-{{category}}" role="alert">{{message}}</div>
       {% endfor %}
   {% endif %}
 {% endwith %}
