--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -20,9 +20,8 @@
   </header>
   {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
-
       {% for category, message in messages %}
-      <div class="alert alert-success" role="alert">{{message}}</div>
+      <div class="alert alert-{{category}}" role="alert">{{message}}</div>
       {% endfor %}
   {% endif %}
 {% endwith %}
