--- a/page_analyzer/templates/show_url.html
+++ b/page_analyzer/templates/show_url.html
@@ -3,7 +3,7 @@
     {% include 'header.html' %}
   <main class="flex-grow-1">
     <div class="container-lg mt-3">
-      <h1>Сайт: {{ url[1] }}</h1>
+      <h1>Сайт: {{ url.name }}</h1>
 
     
   <div class="table-responsive">
@@ -11,22 +11,22 @@
       <tbody>
         <tr>
           <td>ID</td>
-          <td>{{ url[0] }}</td>
+          <td>{{ url.id }}</td>
         </tr>
         <tr>
           <td>Имя</td>
-          <td>{{ url[1] }}</td>
+          <td>{{ url.name }}</td>
         </tr>
         <tr>
           <td>Дата создания</td>
-          <td>{{ url[2] }}</td>
+          <td>{{ url.created_at }}</td>
         </tr>
       </tbody>
     </table>
   </div>
 
     <h2 class="mt-5 mb-3">Проверки</h2>
-    <form method="post" action="/urls/{{url[0]}}/checks">
+    <form method="post" action="/urls/{{url.id}}/checks">
     <input type="submit" class="btn btn-primary" value="Запустить проверку">
     </form>
     
@@ -45,12 +45,12 @@
     {% for check in checks %}
       <tbody>
         <tr>
-            <td>{{check[0]}}</td>
-            <td>{{check[2]}}</td>
-            <td>{{check[3]}}</td>
-            <td>{{check[4]}}</td>
-            <td>{{check[5]}}</td>
-            <td>{{check[6]}}</td>
+            <td>{{check.id}}</td>
+            <td>{{check.status_code}}</td>
+            <td>{{check.h1}}</td>
+            <td>{{check.title}}</td>
+            <td>{{check.description}}</td>
+            <td>{{check.created_at}}</td>
         </tr>
     </tbody>
     {% endfor %}
