--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en"><head>
-    {% include 'header.html' %}
+    {% extends "base.html" %}
+    {% block main %}
   <main class="flex-grow-1">
     <div class="container-lg mt-3">
       <h1></h1>
-
-    
 <div class="row">
   <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
     <h1 class="display-3">Анализатор страниц</h1>
@@ -17,11 +16,6 @@
 </form>
   </div>
 </div>
-
     </div>
   </main>
-  {% include 'footer.html' %}
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  
-</body></html>
+  {% endblock %}
