--- a/page_analyzer/templates/show_url.html
+++ b/page_analyzer/templates/show_url.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-    {% include 'header.html' %}
+{% extends "base.html" %}
+{% block main %}
   <main class="flex-grow-1">
     <div class="container-lg mt-3">
       <h1>Сайт: {{ url.name }}</h1>
-
-    
   <div class="table-responsive">
     <table class="table table-bordered table-hover text-nowrap" data-test="url">
       <tbody>
@@ -24,12 +22,10 @@
       </tbody>
     </table>
   </div>
-
     <h2 class="mt-5 mb-3">Проверки</h2>
     <form method="post" action="/urls/{{url.id}}/checks">
     <input type="submit" class="btn btn-primary" value="Запустить проверку">
     </form>
-    
   <div>
     <table class="table table-bordered table-hover mt-2" data-test="checks">
     <thead>
@@ -59,9 +55,4 @@
 
     </div>
   </main>
-  {% include 'footer.html' %}
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  
-</body>
-</html>
+{% endblock %}
