--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -1,27 +1,28 @@
 {% extends "base.html" %}
 {% block div %}
-    <div class="container-lg mt-3">
-      <h1>Сайты</h1>  
-<div class="table-responsive">
-  <table class="table table-bordered table-hover text-nowrap" data-test="urls">
+<div class="container-lg mt-3">
+    <h1>Сайты</h1>  
+    <div class="table-responsive">
+    <table class="table table-bordered table-hover text-nowrap" data-test="urls">
     <thead>
     <tr>
-      <th>ID</th>
-      <th>Имя</th>
-      <th>Последняя проверка</th>
-      <th>Код ответа</th>
+        <th>ID</th>
+        <th>Имя</th>
+        <th>Последняя проверка</th>
+        <th>Код ответа</th>
     </tr>
     </thead>
     {% for url in check_urls %}
     <tbody>
         <tr>
-          <td>{{url.id}}</td>
-          <td><a href="{{url_for('show_url', url_id=url.id)}}">{{url.name}}</a></td>
-          <td>{{url.last_check if url.last_check else ''}}</td>
-          <td>{{url.status_code if url.status_code else ''}}</td>
+            <td>{{url.id}}</td>
+            <td><a href="{{url_for('show_url', url_id=url.id)}}">{{url.name}}</a></td>
+            <td>{{url.last_check if url.last_check else ''}}</td>
+            <td>{{url.status_code if url.status_code else ''}}</td>
         </tr>
     </tbody>
     {% endfor %}
-  </table>
-</div></div>
+    </table>
+    </div>
+</div>
   {% endblock %}
